# AI-Data-Analyst-Project

./: main.py  pyproject.toml  requirements.txt  test.ipynb
agents/: sql_agent.py  visualisation_agent.py
config/: llm.py  settings.py
database/: context.py  database_manager.py  schema_cache.py  schema_extractor.py  upload_handler.py
graph/: workflow.py
guardrails/: performance.py  schema.py  security.py
nodes/: insight_generation.py  review_node.py  routers.py  sql_execution.py  sql_generation.py  sql_validation.py  visualisation_node.py
prompts/: insight_prompt.py  sql_prompt.py  visualisation_prompt.py
states/: analyst_state.py  chart.py
tools/: chart_renderer.py  sql_tools.py
