[project]
name = "ai-data-analyst-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.0",
    "openai>=1.99",
    "pandas>=2.2",
    "plotly>=6.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "python-dotenv>=1.1",
    "sqlalchemy>=2.0",
    "streamlit>=1.48",
]
