[project]
name = "ai-data-analyst-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=1.3.3",
    "langfuse>=4.14.1",
    "langgraph>=0.6.0",
    "logger>=1.4",
    "openai>=1.99",
    "pandas>=2.2",
    "plotly>=6.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.1",
    "sqlalchemy>=2.0",
    "sqlparse>=0.5.5",
    "streamlit>=1.48",
]
